--- a/boards/shields/nice_view_gem/CMakeLists.txt
+++ b/boards/shields/nice_view_gem/CMakeLists.txt
@@ -12,8 +12,12 @@ if(CONFIG_ZMK_DISPLAY AND CONFIG_NICE_VIEW_WIDGET_STATUS)
   zephyr_library_sources(widgets/screen.c)
   zephyr_library_sources(widgets/wpm.c)
   else()
-    zephyr_library_sources(assets/transmutation.c)
-    zephyr_library_sources(widgets/animation32.c)
+    zephyr_library_sources(assets/animations/crystal.c)
+    zephyr_library_sources(assets/animations/omnissiah.c)
+    zephyr_library_sources(assets/animations/transmutation.c)
+    zephyr_library_sources(assets/animations/ultramar.c)
+    zephyr_library_sources(widgets/animation.c)
+    zephyr_library_sources(widgets/animation_assets.c)
     zephyr_library_sources(widgets/screen_peripheral.c)
   endif()
 endif()
