--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 # CMakeLists.txt
 zephyr_library()
 zephyr_library_sources(src/behaviors/behavior_cycle_animation.c)
-#zephyr_include_directories(${APPLICATION_SOURCE_DIR}/include)
-zephyr_include_directories(./include)
+
+zephyr_include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
