--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 # CMakeLists.txt
 zephyr_library()
-zephyr_library_sources(src/behaviors/behavior_cycle_animation.c)
 
-zephyr_library_include_directories(${ZMK_CONFIG}/include)
+# Add C sources
+zephyr_library_sources(
+    src/behaviors/behavior_cycle_animation.c
+)
+zephyr_include_directories(include)
