--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ zephyr_library()
 zephyr_library_sources(
     src/behaviors/behavior_cycle_animation.c
 )
-zephyr_include_directories(include)
+zephyr_library_include_directories(include)
+
+zephyr_library_include_directories(${ZMK_CONFIG}/include)
