--- a/dts/bindings/behaviors/zmk,behavior-cycle-animation.yaml
+++ b/dts/bindings/behaviors/zmk,behavior-cycle-animation.yaml
@@ -1,6 +1,23 @@
-# zmk,behavior-cycle-animation.yaml
-description: Nice!View cycle + animation control
-
+description: Nice!View animation + theme control
 compatible: "zmk,behavior-cycle-animation"
-
 include: one_param.yaml
+
+options:
+  param1:
+    values:
+      - value: NVC_TOG
+        display_name: Toggle animation
+        description: Toggle Nice!View animations on or off.
+        icon: "mdi:animation"
+      - value: NVC_OFF
+        display_name: Animations off
+        description: Disable animations and show a static frame.
+        icon: "mdi:animation-off"
+      - value: NVC_ON
+        display_name: Animations on
+        description: Enable animated playback for the current theme.
+        icon: "mdi:animation-play"
+      - value: NVC_NEXT
+        display_name: Next theme
+        description: Switch to the next Nice!View theme.
+        icon: "mdi:palette"
