--- a/boards/shields/prototype_mk1/CMakeLists.txt
+++ b/boards/shields/prototype_mk1/CMakeLists.txt
@@ -1,1 +1,9 @@
-${CMAKE_CURRENT_LIST_DIR}/../../../include
+# Nothing is needed here for a normal shield
+# unless you are adding shield-specific C sources
+
+zephyr_library()
+
+# If this shield has extra C sources (unlikely)
+# zephyr_library_sources(something.c)
+
+# DO NOT add include paths or module things here!
