--- a/dts/behaviors/cycle_animation.dtsi
+++ b/dts/behaviors/cycle_animation.dtsi
@@ -2,7 +2,7 @@
 
 / {
     behaviors {
-        NVC: cycle_animation {
+        nvc: nvc {
             compatible = "zmk,behavior-cycle-animation";
             #binding-cells = <1>;
         };
