--- a/build.yaml
+++ b/build.yaml
@@ -12,14 +12,13 @@ include:
   - board: nice_nano_v2
     shield: prototype_mk1_left nice_view_adapter nice_view_gem
     artifact-name: left-dongle
-    snippet: zmk-usb-logging
-
+    #snippet: zmk-usb-logging
 
   - board: nice_nano_v2
     shield: prototype_mk1_left nice_view_adapter nice_view_gem
     artifact-name: left
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    snippet: zmk-usb-logging
+    #snippet: zmk-usb-logging
 
   - board: nice_nano_v2
     shield: prototype_mk1_right nice_view_adapter nice_view_gem
