--- a/boards/shields/nice_view_gem/CMakeLists.txt
+++ b/boards/shields/nice_view_gem/CMakeLists.txt
@@ -3,6 +3,7 @@ zephyr_include_directories(
   ${ZMK_CONFIG}/include
   ${ZMK_APP}/include
 )
+zephyr_library_include_directories(${ZMK_BASE}/app/include)
 
 # Always build the animation control behavior when this shield is in use.
 zephyr_library_sources(behaviors/behavior_cycle_animation.c)
