--- a/app/dts/behaviors/cycle_animation.dtsi
+++ b/app/dts/behaviors/cycle_animation.dtsi
@@ -1,8 +1,9 @@
 #include <dt-bindings/zmk/behaviors.h>
+#include <dt-bindings/zmk/keys.h>
 
 / {
     behaviors {
-        nvc: nvc {
+       /omit-if-no-ref/ nvc: nvc {
             compatible = "zmk,behavior-cycle-animation";
             #binding-cells = <1>;
         };
