--- a/zephyr/module.yml
+++ b/zephyr/module.yml
@@ -1,6 +1,9 @@
 name: Keyboard-Prototype_Mk1
 
 build:
+  kconfig: app/Kconfig
   settings:
-    board_root: .
+    board_root: boards
     dts_root: app
+    src_root: app/src
+    include: include
