--- a/zephyr/module.yml
+++ b/zephyr/module.yml
@@ -1,8 +1,7 @@
 name: Keyboard-Prototype_Mk1
 
 build:
+  cmake: .
   settings:
     board_root: boards
     dts_root: app
-    src_root: app/src
-    include: include
