--- a/boards/shields/prototype_mk1/prototype_mk1_dongle.conf
+++ b/boards/shields/prototype_mk1/prototype_mk1_dongle.conf
@@ -7,7 +7,7 @@
 CONFIG_ZMK_KEYBOARD_NAME="Prototype_Mk1"
 
 # Increase BT TX Power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
 
 # Backlight
 CONFIG_ZMK_BACKLIGHT=y
@@ -26,6 +26,9 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
+# Sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
 ### -----------------------------------------
 ### OLED DISPLAY
