--- a/build.yaml
+++ b/build.yaml
@@ -16,12 +16,12 @@ include:
   - board: nice_nano_v2
     shield: prototype_mk1_left nice_view_adapter nice_view_gem
     artifact-name: left_TRANSMUTATION
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME=0
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME='0'
 
   - board: nice_nano_v2
     shield: prototype_mk1_right nice_view_adapter nice_view_gem
     artifact-name: right_TRANSMUTATION
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME=0
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME='0'
 
   - board: nice_nano_v2
     shield: prototype_mk1_left nice_view_adapter nice_view_gem
