--- a/build.yaml
+++ b/build.yaml
@@ -15,45 +15,12 @@ include:
 
   - board: nice_nano_v2
     shield: prototype_mk1_left nice_view_adapter nice_view_gem
-    artifact-name: left_TRANSMUTATION
+    artifact-name: left
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_0=y
 
   - board: nice_nano_v2
     shield: prototype_mk1_right nice_view_adapter nice_view_gem
-    artifact-name: right_TRANSMUTATION
+    artifact-name: right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_0=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_left nice_view_adapter nice_view_gem
-    artifact-name: left_OMNISSIAH
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_1=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_right nice_view_adapter nice_view_gem
-    artifact-name: right_OMNISSIAH
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_1=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_left nice_view_adapter nice_view_gem
-    artifact-name: left_ULTRAMAR
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_2=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_right nice_view_adapter nice_view_gem
-    artifact-name: right_ULTRAMAR
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_2=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_left nice_view_adapter nice_view_gem
-    artifact-name: left_CRYSTAL
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_3=y
-
-  - board: nice_nano_v2
-    shield: prototype_mk1_right nice_view_adapter nice_view_gem
-    artifact-name: right_CRYSTAL
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n -DCONFIG_NICE_VIEW_ANIMATION_THEME_3=y
-
-
-
 
 
