--- a/config/prototype_mk1.conf
+++ b/config/prototype_mk1.conf
@@ -62,3 +62,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 ### OLED DISPLAY
 # Custom Display
 CONFIG_ZMK_DISPLAY=y
+
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
