--- a/boards/shields/prototype_mk1/prototype_mk1.conf
+++ b/boards/shields/prototype_mk1/prototype_mk1.conf
@@ -16,8 +16,8 @@
 ### -----------------------------------------
 ### Peripherals
 # Encoder Support
-#CONFIG_EC11=y
-#CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Mouse Emulation
 #CONFIG_ZMK_MOUSE=y
@@ -25,9 +25,9 @@
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 
 # Backlight
-#CONFIG_ZMK_BACKLIGHT=y
-#CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_STEP=10
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
 # Compatability
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
@@ -43,8 +43,8 @@
 #CONFIG_ZMK_EXT_POWER=y
 
 # Sleep
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
-#CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 
 
 # Battery
