--- a/boards/shields/prototype_mk1/prototype_mk1_dongle.conf
+++ b/boards/shields/prototype_mk1/prototype_mk1_dongle.conf
@@ -35,9 +35,6 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # display
 #CONFIG_BT_BAS=n
-
-# Remove Encoders
-#CONFIG_EC11=n
