--- a/config/prototype_mk1.conf
+++ b/config/prototype_mk1.conf
@@ -63,3 +63,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # Custom Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_NICE_VIEW_ANIMATION=y
+
+
+CONFIG_LOG=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
